examples/test/testpolicy4650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4650
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key23: value3
      key44: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value27
          key27: value2
      podSelector:
        matchLabels:
          key38: value20
